--- a/public/css/style.css
+++ b/public/css/style.css
@@ -121,4 +121,38 @@ font-weight: 400;
     border-top-left-radius: 0; /* Left top rounded */
     border-bottom-left-radius: 0; /* Left bottom rounded */
 }
+#filters{
+display: flex;
+flex-wrap:wrap;
+align-items: center;
+}
+.filter{
+text-align:center;
+margin-right: 2rem;
+margin-top: 2rem;
+opacity: 0.7;
+}
+.filter:hover{
+opacity: 1;
+cursor: pointer;
+}
+.filter p{
+font-size: 0.8rem;
+}
+.tax-info{
+display: none;
+}
+.tax-toggle{
+border: 1px solid rgb(232, 224, 224);
+border-radius: 1rem;
+height: 3rem;
+padding: 1rem;
+margin-left: 3rem;
+display: flex;
+align-items: center;
+}
+.tax-toggle:hover{
+border: 1px solid black;
+}
+
 
