Updated Content Security Policy for font-src and style-src

--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -2,47 +2,47 @@
 <body>
      <div id="filters">
         <div class="filter" onclick="location.href='/listings?category=Trending'">
-            <!-- <div><i class="fa-solid fa-fire"></i></div> -->
+            <div><i class="fa-solid fa-fire"></i></div>
             <p>Trending</p>
         </div>
         <div class="filter" onclick="location.href='/listings?category=Rooms'">
-            <!-- <div><i class="fa-solid fa-bed"></i></div> -->
+            <div><i class="fa-solid fa-bed"></i></div>
             <p>Rooms</p>
         </div>
         <div class="filter" onclick="location.href='/listings?category=Iconiccities'">
-            <!-- <div><i class="fa-solid fa-mountain-city"></i></div> -->
+            <div><i class="fa-solid fa-mountain-city"></i></div>
             <p>Iconic cities</p>
         </div>
         <div class="filter" onclick="location.href='/listings?category=Mountains'">
-            <!-- <div><i class="fa-solid fa-mountain"></i></div> -->
+            <div><i class="fa-solid fa-mountain"></i></div>
             <p>Mountains</p>
         </div>
         <div class="filter" onclick="location.href='/listings?category=Castles'">
-            <!-- <div><i class="fa-brands fa-fort-awesome"></i></div> -->
+            <div><i class="fa-brands fa-fort-awesome"></i></div>
             <p>Castles</p>
         </div>
         <div class="filter" onclick="location.href='/listings?category=Amazingpools'">
-            <!-- <div><i class="fa-solid fa-person-swimming"></i></div> -->
+            <div><i class="fa-solid fa-person-swimming"></i></div>
             <p>Amazing pools</p>
         </div>
         <div class="filter" onclick="location.href='/listings?category=Camping'">
-            <!-- <div><i class="fa-solid fa-campground"></i></div> -->
+            <div><i class="fa-solid fa-campground"></i></div>
             <p>Camping</p>
         </div>
         <div class="filter" onclick="location.href='/listings?category=Farms'">
-            <!-- <div><i class="fa-solid fa-cow"></i></div> -->
+            <div><i class="fa-solid fa-cow"></i></div>
             <p>Farms</p>
         </div>
         <div class="filter" onclick="location.href='/listings?category=Arctic'">
-            <!-- <div><i class="fa-solid fa-snowflake"></i></div> -->
+            <div><i class="fa-solid fa-snowflake"></i></div>
             <p>Arctic</p>
         </div>
         <div class="filter" onclick="location.href='/listings?category=Boats'">
-            <!-- <div><i class="fa-solid fa-sailboat"></i></div> -->
+            <div><i class="fa-solid fa-sailboat"></i></div>
             <p>Boats</p>
         </div>
         <div class="filter" onclick="location.href='/listings?category=Towers'">
-            <!-- <div><i class="fa-solid fa-tower-observation"></i></div> -->
+            <div><i class="fa-solid fa-tower-observation"></i></div>
             <p>Towers</p>
         </div>
         <div class="tax-toggle">
