--- a/views/includes/footer.ejs
+++ b/views/includes/footer.ejs
@@ -1,10 +1,10 @@
 <footer>
     <div class="f-info"> 
-        <!-- <div class="f-info-socials">
+        <div class="f-info-socials">
             <i class="fa-brands fa-square-facebook"></i>
             <i class="fa-brands fa-square-instagram"></i>
             <i class="fa-brands fa-linkedin"></i>
-        </div> -->
+        </div>
         <div class="f-info-brand">&copy; Wanderlust Private Limited</div>
         <div class="f-info-links">
             <a href="/privacy">Privacy</a>
