--- a/views/listings/edit.ejs
+++ b/views/listings/edit.ejs
@@ -3,7 +3,7 @@
     <div class="row">
         <div class="col-8 offset-2">
             <h3 class="mt-3">Edit Your Listing</h3>
-            <form method="POST" action="/listings/<%= listing._id %>" enctype="multipart/form-data" novalidate class="needs-validation">
+            <form method="POST" action="/<%= listing._id %>" enctype="multipart/form-data" novalidate class="needs-validation">
                 <div class="mb-3">
                     <label for="title" class="form-label">Title</label>
                     <input name="title" value="<%= listing.title %>" type="text" class="form-control" required>
