--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -3,7 +3,6 @@
     <div class="container mt-4 mb-4">
         <h1 class="text-center"><%= listing.title %></h1>
         <% if (listing.image && listing.image.length > 0) { %>
-            <!-- Centered Carousel for images -->
             <div id="carousel-<%= listing._id %>" class="carousel slide mx-auto mb-4" data-ride="carousel" data-interval="false" style="width: 50%;">
                 <div class="carousel-inner">
                     <% for (let i = 0; i < listing.image.length; i++) { %>
@@ -35,68 +34,68 @@
         </div>
 
         <div class="mt-3 text-center">
-            <form action="/listings/<%= listing._id %>/book" method="POST" class="d-inline">
+            <form action="/<%= listing._id %>/book" method="POST" class="d-inline">
                 <button type="submit" class="btn btn-success">Reserve</button>
             </form>
-             <% if(currUser && currUser._id.equals(listing.owner._id)) { %>
-            <a href="/listings/<%= listing._id %>/edit" class="btn btn-warning">Edit</a>
-            <form action="/listings/<%= listing._id %>/delete" method="POST" class="d-inline">
-                <button type="submit" class="btn btn-danger">Delete</button>
-            </form>
+            <% if (currUser && currUser._id.equals(listing.owner._id)) { %>
+                <a href="/<%= listing._id %>/edit" class="btn btn-warning">Edit</a>
+                <form action="/<%= listing._id %>/delete" method="POST" class="d-inline">
+                    <button type="submit" class="btn btn-danger">Delete</button>
+                </form>
             <% } %>
         </div>
 
         <div class="col-8 offset-3">
             <hr>
-            <% if(currUser) { %>
-            <h4>Leave a Review</h4>
-            <form action="/listings/<%= listing.id %>/reviews" method="POST" novalidate class="needs-validation">
-
-                <div class="mb-3 mt-3">
-                <label for="rating" class="form-label">Rating</label>
-                <fieldset class="starability-slot">
-                    <input type="radio" id="no-rate" class="input-no-rate" name="review[rating]" value="1" checked aria-label="No rating." />
-                    <input type="radio" id="first-rate1" name="review[rating]" value="1" />
-                    <label for="first-rate1" title="Terrible">1 star</label>
-                    <input type="radio" id="first-rate2" name="review[rating]" value="2" />
-                    <label for="first-rate2" title="Not good">2 stars</label>
-                    <input type="radio" id="first-rate3" name="review[rating]" value="3" />
-                    <label for="first-rate3" title="Average">3 stars</label>
-                    <input type="radio" id="first-rate4" name="review[rating]" value="4" />
-                    <label for="first-rate4" title="Very good">4 stars</label>
-                    <input type="radio" id="first-rate5" name="review[rating]" value="5" />
-                    <label for="first-rate5" title="Amazing">5 stars</label>
-                </fieldset>
-                </div>
-                <div class="mb-3 mt-3">
-                    <label for="comment" class="form-label">Comments</label>
-                    <textarea  name="review[comment]" id="comment" cols="30" rows="5" class="form-control" required></textarea>
-                    <div class="invalid-feedback">Please add some comments for review</div>
-                </div>
-                <button class="btn btn-outline-dark">Submit</button>
-            </form>
-            <hr />
-        <% } %>
+            <% if (currUser) { %>
+                <h4>Leave a Review</h4>
+                <form action="/<%= listing._id %>/reviews" method="POST" novalidate class="needs-validation">
+                    <div class="mb-3 mt-3">
+                        <label for="rating" class="form-label">Rating</label>
+                        <fieldset class="starability-slot">
+                            <input type="radio" id="no-rate" class="input-no-rate" name="review[rating]" value="1" checked aria-label="No rating." />
+                            <input type="radio" id="first-rate1" name="review[rating]" value="1" />
+                            <label for="first-rate1" title="Terrible">1 star</label>
+                            <input type="radio" id="first-rate2" name="review[rating]" value="2" />
+                            <label for="first-rate2" title="Not good">2 stars</label>
+                            <input type="radio" id="first-rate3" name="review[rating]" value="3" />
+                            <label for="first-rate3" title="Average">3 stars</label>
+                            <input type="radio" id="first-rate4" name="review[rating]" value="4" />
+                            <label for="first-rate4" title="Very good">4 stars</label>
+                            <input type="radio" id="first-rate5" name="review[rating]" value="5" />
+                            <label for="first-rate5" title="Amazing">5 stars</label>
+                        </fieldset>
+                    </div>
+                    <div class="mb-3 mt-3">
+                        <label for="comment" class="form-label">Comments</label>
+                        <textarea name="review[comment]" id="comment" cols="30" rows="5" class="form-control" required></textarea>
+                        <div class="invalid-feedback">Please add some comments for review</div>
+                    </div>
+                    <button class="btn btn-outline-dark">Submit</button>
+                </form>
+                <hr />
+            <% } %>
 
             <p><b>All Reviews</b></p>
             <div class="row">
-            <% for(review of listing.reviews) { %>
-            <div class="card col-5 mb-3 ms-3">
-                <div class="card-body">
-                    <h5 class="card-text">@<%= review.author.username %></h5>
-                    <p class="starability-result" data-rating="<%= review.rating %>"></p>
-                    <p class="card-text"><%= review.comment %></p>
-                </div>
-                <% if(currUser && currUser._id.equals(review.author._id)) { %>
-                <form class="mb-3" method="POST" action="/listings/<%= listing._id %>/reviews/<%= review._id %>">
-                    <button class="btn btn-sm btn-dark">Delete</button>
-                </form>
+                <% for (review of listing.reviews) { %>
+                    <div class="card col-5 mb-3 ms-3">
+                        <div class="card-body">
+                            <h5 class="card-text">@<%= review.author.username %></h5>
+                            <p class="starability-result" data-rating="<%= review.rating %>"></p>
+                            <p class="card-text"><%= review.comment %></p>
+                        </div>
+                        <% if (currUser && currUser._id.equals(review.author._id)) { %>
+                            <form class="mb-3" method="POST" action="/<%= listing._id %>/reviews/<%= review._id %>">
+                                <button class="btn btn-sm btn-dark">Delete</button>
+                            </form>
+                        <% } %>
+                    </div>
                 <% } %>
-            </div>
-            <% } %>
             </div>
         </div>
     </div>
 </body>
+
 
 
