--- a/views/listings/new.ejs
+++ b/views/listings/new.ejs
@@ -4,7 +4,7 @@
         <div class="col-8 offset-2">
             <br/><br/>
             <h3>Create a New Listing</h3>
-            <form method="POST" action="/" enctype="multipart/form-data" novalidate class="needs-validation">
+            <form method="POST" action="/listings" enctype="multipart/form-data" novalidate class="needs-validation">
                 <div class="mb-3">
                     <label for="title" class="form-label">TITLE</label>
                     <input name="title" placeholder="Enter Title" type="text" class="form-control" required>
