--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -1,7 +1,7 @@
 <% layout("layouts/boilerplate") %>
 <body>
      <div id="filters">
-        <div class="filter" onclick="location.href='/lsitings?category=Trending'">
+        <div class="filter" onclick="location.href='/listings?category=Trending'">
             <div><i class="fa-solid fa-fire"></i></div>
             <p>Trending</p>
         </div>
@@ -29,7 +29,7 @@
             <div><i class="fa-solid fa-campground"></i></div>
             <p>Camping</p>
         </div>
-        <div class="filter" onclick="location.href='/lsitings?category=Farms'">
+        <div class="filter" onclick="location.href='/listings?category=Farms'">
             <div><i class="fa-solid fa-cow"></i></div>
             <p>Farms</p>
         </div>
@@ -37,7 +37,7 @@
             <div><i class="fa-solid fa-snowflake"></i></div>
             <p>Arctic</p>
         </div>
-        <div class="filter" onclick="location.href='/lsitings?category=Boats'">
+        <div class="filter" onclick="location.href='/listings?category=Boats'">
             <div><i class="fa-solid fa-sailboat"></i></div>
             <p>Boats</p>
         </div>
