--- a/views/users/signup.ejs
+++ b/views/users/signup.ejs
@@ -1,22 +1,36 @@
 <% layout("layouts/boilerplate") %>
 <div class="row mt-3">
-    <h1 class="col-6 offset-3">Signup on Wanderlust </h1>
+    <h1 class="col-6 offset-3">Signup on Wanderlust</h1>
     <div class="col-6 offset-3">
         <form action="/signup" method="POST" class="needs-validation" novalidate>
             <div class="mb-3">
                 <label for="username" class="form-label">Username</label>
-                <input name="username"  id="username"  type="text" class="form-control" required>
+                <input name="username" id="username" type="text" class="form-control" required>
                 <div class="invalid-feedback">Please enter Username!</div>
             </div>
             <div class="mb-3">
                 <label for="email" class="form-label">Email</label>
-                <input name="email"  id="email"  type="text" class="form-control" required>
+                <input name="email" id="email" type="text" class="form-control" required>
                 <div class="invalid-feedback">Please enter Email!</div>
             </div>
             <div class="mb-3">
                 <label for="password" class="form-label">Password</label>
-                <input name="password"  id="Password"  type="Password" class="form-control" required>
+                <input name="password" id="password" type="password" class="form-control" required>
                 <div class="invalid-feedback">Password needed!</div>
+            </div>
+            <div class="mb-3">
+                <label class="form-label">Role</label>
+                <div class="d-flex">
+                    <div class="form-check me-3">
+                        <input type="radio" name="role" id="role-user" value="user" class="form-check-input" required>
+                        <label for="role-user" class="form-check-label">user</label>
+                    </div>
+                    <div class="form-check">
+                        <input type="radio" name="role" id="role-admin" value="admin" class="form-check-input" required>
+                        <label for="role-admin" class="form-check-label">admin</label>
+                    </div>
+                </div>
+                <div class="invalid-feedback">Please select a role!</div>
             </div>
             <button class="btn btn-success">Signup</button>
         </form>
